# codex

./: customization-plan.md  flake.nix
.github/workflows/: 88code-release.yml  codex-cli-bundles.yml  sync-upstream.yml
codex-rs/: Cargo.toml
codex-rs/cli/: Cargo.toml  build.rs
codex-rs/cli/src/: main.rs
codex-rs/code88/: Cargo.toml
codex-rs/code88/src/: browser.rs  cdp.rs  error.rs  lib.rs  token.rs
codex-rs/core/: Cargo.toml  gpt-5.1-codex-max_prompt.md  gpt_5_1_prompt.md  gpt_5_codex_prompt.md
codex-rs/core/src/: config.rs  config_types.rs  lib.rs  message_history.rs  workspace_state.rs
codex-rs/core/src/config/: mod.rs  types.rs
codex-rs/core/src/openai_models/: model_presets.rs
codex-rs/docs/: codex-statusline-analysis.md  codex-statusline-report.md  statusline.md
codex-rs/protocol/src/: protocol.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_backtrack.rs  app_event.rs  chatwidget.rs  history_cell.rs  lib.rs  slash_command.rs
codex-rs/tui/src/bottom_pane/: chat_composer.rs  mod.rs
codex-rs/tui/src/bottom_pane/snapshots/: codex_tui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_interrupt.snap  codex_tui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_quit.snap  codex_tui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_then_esc_hint.snap  codex_tui__bottom_pane__chat_composer__tests__footer_mode_esc_hint_backtrack.snap  (+5 more)
codex-rs/tui/src/chatwidget/: tests.rs
codex-rs/tui/src/status/: helpers.rs  mod.rs
codex-rs/tui/src/statusline/: code88_api.rs  mod.rs  overlay.rs  palette.rs  state.rs
(+13 files in other folders)
