[package]
name = "codex-code88"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "88code.org login and token management for Codex"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
futures = { workspace = true, features = ["std"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "process", "io-util"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tracing = { workspace = true }
which = { workspace = true }

[lints]
workspace = true
